--- a/des157/index.html
+++ b/des157/index.html
@@ -34,19 +34,19 @@
         <section class="left">
             <h2>STUDIOS</h2>
             <ul>
-                <li><a href="#"></a>Mad Libs 2.0</li>
-                <li><a href="#"></a>Every Picture</li>
-                <li><a href="#"></a>Game On!</li>
+                <li><a href="#">Mad Libs 2.0</a></li>
+                <li><a href="#">Every Picture</a></li>
+                <li><a href="#">Game On!</a></li>
             </ul>
             
             <h2>EXPERIMENTS</h2>
             <ul>
-                <li><a href="#"></a>Exp 1.</li>
+                <li><a href="#">Exp 1.</a></li>
             </ul>
 
             <h2>WRITING</h2>
             <ul>
-                <li><a href="#"></a>Learning Journal</li>
+                <li><a href="#">Learning Journal</a></li>
             </ul>
         </section>
         
@@ -56,19 +56,19 @@
             <h2>DEVELOPMENT</h2>
             <!-- <h2>RESEARCH & DEVELOPMENT</h2> -->
             <ul>
-                <li><a href="#"></a>Project Brief</li>
-                <li><a href="#"></a>Digital Comp</li>
-                <li><a href="#"></a>Refined Comp</li>
-                <li><a href="#"></a>Prototype 1</li>
-                <li><a href="#"></a>User Test</li>
-                <li><a href="#"></a>User Test Results</li>
+                <li><a href="#">Project Brief</a></li>
+                <li><a href="#">Digital Comp</a></li>
+                <li><a href="#">Refined Comp</a></li>
+                <li><a href="#">Prototype 1</a></li>
+                <li><a href="#">User Test</a></li>
+                <li><a href="#">User Test Results</a></li>
             </ul>
         </section>
 
         <section class="right">
             <h2>FINAL</h2>
             <ul>
-                <li><a href="#"></a>Final Project</li>
+                <li><a href="#">Final Project</a></li>
             </ul>
         </section>
 
