--- a/des157/index.html
+++ b/des157/index.html
@@ -42,7 +42,7 @@
             
             <h2>EXPERIMENTS</h2>
             <ul>
-                <li><a href="#">Exp 1.</a></li>
+                <li><a href="exp/exp1.html">Exp 1.</a></li>
             </ul>
 
             <h2>WRITING</h2>
