--- a/des157/exp/exp1.html
+++ b/des157/exp/exp1.html
@@ -10,7 +10,7 @@
     <h1>Experiment 1</h1>
     <h2>How to open console: (1) right click the page; (2) press inspect.</h2>
     <script>
-        var myString = "#######";
+        var myString = "########";
 
         for (var i=1; i<myString.length; i++){
             console.log(myString.slice(0, i));
