add banner and its behaviors

--- a/des157/index.html
+++ b/des157/index.html
@@ -18,7 +18,10 @@
     <header>
 
         <div id="banner">
-            
+            <div id="reel1"><img src="pictures/reel1.png" alt="reel1"></div>
+            <div id="reel2"><img src="pictures/reel2.png" alt="reel2"></div>
+            <div id="reel3"><img src="pictures/reel3.png" alt="reel3"></div>
+            <div id="reel4"><img src="pictures/reel4.png" alt="reel4" ></div>
         </div>
 
         <div id="name">
