--- a/des157/index.html
+++ b/des157/index.html
@@ -24,6 +24,8 @@
             <div id="reel4"><img src="pictures/reel4.png" alt="reel4" ></div>
         </div>
 
+        <div id="spotlight"></div>
+
         <div id="name">
             <h3>DES 157 - Interactive Media II</h3>
             <h2>Spring 2021</h2>
