Added learning journal page

--- a/des157/index.html
+++ b/des157/index.html
@@ -24,7 +24,8 @@
             <div id="reel4"><img src="pictures/reel4.png" alt="reel4" ></div>
         </div>
 
-        <div id="spotlight"></div>
+        <div id="spotlight1"></div>
+        <div id="spotlight2"></div>
 
         <div id="name">
             <h3>DES 157 - Interactive Media II</h3>
@@ -52,7 +53,7 @@
 
             <h2>WRITING</h2>
             <ul>
-                <li><a href="#">Learning Journal</a></li>
+                <li><a href="lj/index.html">Learning Journal</a></li>
             </ul>
         </section>
         
