Updated the learning journal

--- a/des157/lj/index.html
+++ b/des157/lj/index.html
@@ -8,17 +8,45 @@
 
     <!-- style sheets -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
+    
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Passion+One&family=Playball&family=Titillium+Web:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- banner -->
     <header>
-
+        <h1>Xinlei Li's Learning Journals</h1>
     </header>
 
     <!-- page -->
     <main>
-        <!-- create posts: use <article> -->
+        <div id="container">
+            <!-- create posts: use <article> -->
+
+            <article class="414">
+                <h2>April 14th</h2>
+                <h3>
+                    Those Easily Overlooked Details
+                </h3>
+
+                <p class="link">Reading link: <a href="https://uxdesign.cc/best-practices-for-form-design-ff5de6ca8e5f">Best practices for form design by Salim Ansari</a></p>
+                <p class="content">The author </p>  
+            </article>
+
+            <article class="420">
+                <h2>April 20th</h2>
+                <h3>(Testing)</h3>
+
+                <p class="link">Reading Link:</p>
+                <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore perferendis, blanditiis nam id aliquid nisi reiciendis placeat iste rerum architecto esse culpa excepturi incidunt voluptatum itaque amet, voluptates similique cupiditate?</p>
+            </article>
+
+        </div>
+
     </main>
 
     <!-- footer -->
