command out the testing section

--- a/des157/lj/index.html
+++ b/des157/lj/index.html
@@ -39,13 +39,13 @@
                     Before coding the forms for the websites, I should ask myself a few questions: what kinds of forms will drive me crazy? Which type of form do I like the most? I should also review and test my forms with different people after the coding completes. For example, the author mentions that the label should be outside of the typing boxes because the disappearance may cause inconvenience for those who would need to check again. The author also points out how "trivial" items like placeholder text and fields' size can cause significant confusion. It's common to see, and I know how to handle them right away, but as a designer, it will be crucial to overlook these details.  </p>  
             </article>
 
-            <article class="420">
+            <!-- <article class="420">
                 <h2>April 20th</h2>
                 <h3>(Testing)</h3>
 
                 <p class="link">Reading Link:</p>
                 <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore perferendis, blanditiis nam id aliquid nisi reiciendis placeat iste rerum architecto esse culpa excepturi incidunt voluptatum itaque amet, voluptates similique cupiditate?</p>
-            </article>
+            </article> -->
 
         </div>
 
