--- a/des157/lj/index.html
+++ b/des157/lj/index.html
@@ -33,7 +33,7 @@
                     Those Easily Overlooked Details
                 </h3>
 
-                <p class="link">Reading link: <a href="https://uxdesign.cc/best-practices-for-form-design-ff5de6ca8e5f">Best practices for form design by Salim Ansari</a></p>
+                <p class="link">Reading Link: <a href="https://uxdesign.cc/best-practices-for-form-design-ff5de6ca8e5f">Best practices for form design by Salim Ansari</a></p>
                 <p class="content">The author provides many comparisons between user-friendly forms, and those are not. Today, most people fill in forms online for different reasons, and sometimes it takes some extra steps for the users to understand and adapt to various kinds of formats. As a web designer, I should take care of all the details to make my forms efficient. 
 
                     Before coding the forms for the websites, I should ask myself a few questions: what kinds of forms will drive me crazy? Which type of form do I like the most? I should also review and test my forms with different people after the coding completes. For example, the author mentions that the label should be outside of the typing boxes because the disappearance may cause inconvenience for those who would need to check again. The author also points out how "trivial" items like placeholder text and fields' size can cause significant confusion. It's common to see, and I know how to handle them right away, but as a designer, it will be crucial to overlook these details.  </p>  
@@ -54,8 +54,8 @@
     <!-- footer -->
     <footer>
         <a href="mailto:&#120;&#108;&#122;&#108;&#105;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;">Email Address</a>
-        <a href="https://validator.w3.org/check?uri=referer">Valid HTML 5</a>
-        <a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
+        <a href="https://validator.w3.org/check?uri=https://dogedogedog.github.io/des157/lj/index.html">Valid HTML 5</a>
+        <a href="https://jigsaw.w3.org/css-validator/check?uri=uri=https://dogedogedog.github.io/des157/lj/index.html">Valid CSS</a>
     </footer>
 </body>
 </html>
