--- a/des157/lj/index.html
+++ b/des157/lj/index.html
@@ -35,8 +35,23 @@
 
                 <p class="link">Reading Link: <a href="https://uxdesign.cc/best-practices-for-form-design-ff5de6ca8e5f">Best practices for form design by Salim Ansari</a></p>
                 <p class="content">The author provides many comparisons between user-friendly forms, and those are not. Today, most people fill in forms online for different reasons, and sometimes it takes some extra steps for the users to understand and adapt to various kinds of formats. As a web designer, I should take care of all the details to make my forms efficient. 
+                    <br>
+                    <br>Before coding the forms for the websites, I should ask myself a few questions: what kinds of forms will drive me crazy? Which type of form do I like the most? I should also review and test my forms with different people after the coding completes. For example, the author mentions that the label should be outside of the typing boxes because the disappearance may cause inconvenience for those who would need to check again. The author also points out how "trivial" items like placeholder text and fields' size can cause significant confusion. It's common to see, and I know how to handle them right away, but as a designer, it will be crucial to overlook these details.  </p>  
+            </article>
 
-                    Before coding the forms for the websites, I should ask myself a few questions: what kinds of forms will drive me crazy? Which type of form do I like the most? I should also review and test my forms with different people after the coding completes. For example, the author mentions that the label should be outside of the typing boxes because the disappearance may cause inconvenience for those who would need to check again. The author also points out how "trivial" items like placeholder text and fields' size can cause significant confusion. It's common to see, and I know how to handle them right away, but as a designer, it will be crucial to overlook these details.  </p>  
+            <article class="422">
+                <h2>April 22th</h2>
+                <h3>Sometimes a Designer, but Most of the Time: 
+                    <br><b>A User</b></h3>
+
+                <p class="link">Reading Link: <a href="https://www.nngroup.com/articles/overuse-of-overlays/">Overuse of Overlays: How to Avoid Misusing Lightboxes by Kathryn Whitenton</a></p>
+                <p class="content">Even though this article is more from the designers' perspective, I feel a profound resonance as a user. I keep facing the annoying overlays and popping lightboxes almost every day when I try to search for something online. Many shopping websites urgently want to get people's attention as fast as possible so that they can spend money in a second without hesitation. It's funny that we have random advertisements and promotions filling up our mailboxes, and they seem to follow the technology: they turn into digital media as promotional codes. 
+                    <br>
+                    <br>Recently, a few friends working in the web development industry started to build their blogs. We all got tired of posting pictures and share moments on popular social media platforms. Considering the internet trends today, we frequently feel certain anxiety among the little time and fast pace hiding behind the static or dynamic format to share one's life. It's hard for designers working under restrictions even if they have considered the misusing facts mentioned in the article. 
+                    <br>
+                    <br>After they opened their blogs and published a few stories, I was amazed at myself quietly reading long paragraphs for almost half an hour. There were no distractions and interruptions because my friends certainly don't want to have any commercial actions from their readers. Their purpose is simple: sharing their daily life. 
+                    <br>
+                    <br>As the number of mobile users increases, more and more companies start to take care of their website design on smaller screens than desktops. However, it's still easy to see the overuse of overlays everywhere. Sadly, many industries answer the five W questions around their maximum benefits instead of user experience. I hope to see more helpful overlays like introductions or tutorials on the future internet and also my own designs. A good designer should be a user with needs at the same time. Other than the five W questions in the article, it's also essential to ask oneself: what do I feel uneasy? Why? </p>
             </article>
 
             <!-- <article class="420">
