--- a/des157/index.html
+++ b/des157/index.html
@@ -49,6 +49,7 @@
             <h2>EXPERIMENTS</h2>
             <ul>
                 <li><a href="exp/exp1.html">Exp 1.</a></li>
+                <li><a href="exp/exp2.html">Exp 2.</a></li>
             </ul>
 
             <h2>WRITING</h2>
