--- a/des157/studio1/index.html
+++ b/des157/studio1/index.html
@@ -15,15 +15,19 @@
     <script src="script.js" defer></script>
 </head>
 
-<div id="container">
-    <body>
+<body>
+    <div class="container">
         <header>
             <h1>My Story About a Balloon</h1>
         </header>
+    </div>
 
+    <div class="container">
         <div images>
             <div id="balloon"><img src="images/defaultballoons.png" alt="default balloons"></div>
             <div id="character"><img src="images/default.png" alt="default character"></div>
+
+            <div id="characterSmile" class="hidden"><img src="images/smile.png" alt="smile character"></div>
         </div>
 
         <main>
@@ -83,22 +87,23 @@
                 <input type="submit" value="Read My Story" class="open">
             </form>
 
+            <!-- after submit the form: -->
+            <article id="madlib"></article>
+            <form action="index.html" id="tryagain" class="hidden">
+                <input type="submit" value="Try Again!">
+            </form>
+
         </main>
+    </div>
 
-        <!-- idea: by clicking submit button, the result will show on overlay -->
-        <!-- idea2: if JS script can work to directly replace the form section, then the overlay is unnecessary -->
-        <!-- <section id="overlay" class="hidden">
-            <article id="madlib">
-                <h2>Overlay content here</h2>
-                <button class="tryagain">Try Again</button>
-            </article>
-        </section> -->
-
+    <div class="container">
         <footer>
             <a href="https://validator.w3.org/check?uri=https://dogedogedog.github.io/des157/studio1/index.html">Valid HTML 5</a>
             <a href="https://jigsaw.w3.org/css-validator/check?uri=uri=https://dogedogedog.github.io/des157/studio1/index.html">Valid CSS</a>
         </footer>
-    </body>
-</div>
+    </div>
+
+</body>
+
 
 </html>
