--- a/des157/studio1/index.html
+++ b/des157/studio1/index.html
@@ -53,7 +53,7 @@
                 <label for="mean">What do balloons mean to you?</label>
                 <br>
                 <select name="mean" id="mean">
-                    <option value="empty"></option>
+                    <option value="empty">----------------------------------------</option>
                     <option value="happiness. It dances with the fresh breeze in the sky, performing the best show you could ever see.">Happiness :)</option>
                     <option value="nightmares. It is so vulnerable that could scare me at any time with loud bursting sound.">Nightmares X(</option>
                 </select>
@@ -63,7 +63,7 @@
                 <label for="want">Do you want some balloons?</label>
                 <br>
                 <select name="want" id="want">
-                    <option value="empty"></option>
+                    <option value="empty">----------------------------------------</option>
                     <option value="I've been looking forward to having my own balloon">I really want one!</option>
                     <option value="I've been asking God to keep me away from balloons">I don't want any balloon!</option>
                 </select>
@@ -73,7 +73,7 @@
                 <label for="balloon">Which balloon could be yours?</label>
                 <br>
                 <select name="balloon" id="balloon">
-                    <option value="empty"></option>
+                    <option value="empty">----------------------------------------</option>
                     <option value="a passion fruit flavored ice-cream">ice-cream</option>
                     <option value="my favorite Starbucks frappuccino">Starbucks frappuccino</option>
                     <option value="a cup of milktea with boba">milktea with boba</option>
@@ -84,7 +84,7 @@
                 <label for="like">Do you like balloons?</label>
                 <br>
                 <select name="like" id="like">
-                    <option value="empty"></option>
+                    <option value="empty">----------------------------------------</option>
                     <option value="I loved so much.">I like it a lot!</option>
                     <option value="I hated so bad.">I hate it so bad.</option>
                 </select>
@@ -94,7 +94,7 @@
                 <label for="act">What will you do to balloons?</label>
                 <br>
                 <select name="act" id="act">
-                    <option value="empty"></option>
+                    <option value="empty">----------------------------------------</option>
                     <option value="sned them to who I love?">make them into gifts</option>
                     <option value="blow them up?">blow them up</option>
                 </select>
