--- a/des157/lj/index.html
+++ b/des157/lj/index.html
@@ -95,7 +95,7 @@
 
                 <figure>
                     <img src="pictures/506.jpg" alt="scrapbook-florence">
-                    <figcaption>I made this scrapbook page made in Florence in September, 2018.</figcaption>
+                    <figcaption>I made this scrapbook page in Florence in September, 2018.</figcaption>
                 </figure>
 
                 <br><br><br><br><br><p class="content">I didn't put this topic on the top of my list because I have stopped making new pages for a while. There are many bitter memories behind this whole book. Even though it has been with me for four years and records many beautiful traveling stories, I still often thought about throwing it away, and I don't know why. When I showed it to my Teacher Assistant Annie in class, she said it was unique and meaningful. Suddenly, I understand the reason for my urger: I can't see the meaning of its companion anymore.</p>
