footer links into list

--- a/des157/studio1/index.html
+++ b/des157/studio1/index.html
@@ -115,8 +115,10 @@
     <div class="container">
         <div class="sth"></div>
         <footer>
-            <a href="https://validator.w3.org/check?uri=https://dogedogedog.github.io/des157/studio1/index.html">Valid HTML 5</a>
-            <a href="https://jigsaw.w3.org/css-validator/check?uri=uri=https://dogedogedog.github.io/des157/studio1/index.html">Valid CSS</a>
+            <ul>
+                <li><a href="https://validator.w3.org/check?uri=https://dogedogedog.github.io/des157/studio1/index.html">Valid HTML 5</a></li>
+                <li><a href="https://jigsaw.w3.org/css-validator/check?uri=uri=https://dogedogedog.github.io/des157/studio1/styles.css">Valid CSS</a></li>
+            </ul>
         </footer>
     </div>
 
