--- a/des157/studio2/index.html
+++ b/des157/studio2/index.html
@@ -43,8 +43,10 @@
         </header>
 
         <footer>
-            <a href="https://validator.w3.org/check?uri=https://dogedogedog.github.io/des157/studio2/index.html">Valid HTML 5</a>
-            <a href="https://jigsaw.w3.org/css-validator/check?uri=uri=https://dogedogedog.github.io/des157/studio2/style.css">Valid CSS</a>
+            <ul>
+                <li><a href="https://validator.w3.org/check?uri=https://dogedogedog.github.io/des157/studio2/index.html">Valid HTML 5</a></li>
+                <li><a href="https://jigsaw.w3.org/css-validator/check?uri=uri=https://dogedogedog.github.io/des157/studio2/style.css">Valid CSS</a></li>
+            </ul>
         </footer>
 
     </main>
