--- a/des157/studio1/index.html
+++ b/des157/studio1/index.html
@@ -115,10 +115,9 @@
     <div class="container">
         <div class="sth"></div>
         <footer>
-            <ul>
-                <li><a href="https://validator.w3.org/check?uri=https://dogedogedog.github.io/des157/studio1/index.html">Valid HTML 5</a></li>
-                <li><a href="https://jigsaw.w3.org/css-validator/check?uri=uri=https://dogedogedog.github.io/des157/studio1/styles.css">Valid CSS</a></li>
-            </ul>
+        <ul>
+            <a href="https://validator.w3.org/check?uri=https://dogedogedog.github.io/des157/studio1/index.html">Valid HTML 5</a>
+            <a href="https://jigsaw.w3.org/css-validator/check?uri=uri=https://dogedogedog.github.io/des157/studio1/styles.css">Valid CSS</a>
         </footer>
     </div>
 
