--- a/des157/studio2/index.html
+++ b/des157/studio2/index.html
@@ -39,7 +39,7 @@
         </div>
 
         <header>
-            <h1>Welcome to Xinlei Li's Collections</h1>
+            <h1>Xinlei Li's Memory Collection</h1>
         </header>
 
         <footer>
