update overlay contents

--- a/des157/studio2/index.html
+++ b/des157/studio2/index.html
@@ -55,15 +55,17 @@
     <section id="ol-topOne" class="overlay hidden">
         <article>
             <img src="images/fr-eonjoo.jpg" alt="eonjoo">
-            <figcaption></figcaption>
+            <figcaption>March 2018 in Boston with my high school best friend Eon-Joo Jang</figcaption>
+            <p>"We should meet each other at least once a year." And then we have never met again. :(</p>
             <button class="close">close</button>
         </article>
     </section>
 
     <section id="ol-topTwo" class="overlay hidden">
         <article>
-            <img src="images/so-italy.jpeg" alt="italy">
-            <figcaption></figcaption>
+            <img src="images/so-italy.jpg" alt="italy">
+            <figcaption>September 2018 in Florence, Italy: where I stayed</figcaption>
+            <p>On July 2nd, 2018, I didn't bring all the documents to the visa officer at the Italian Embassy. I thought I could not start my quarter abroad program, but the officer wrote me what to do in details, explained everything to me extremely patiently, and waited me until I had collected everything. This was the beginning of my unforgettable journey.</p>
             <button class="close">close</button>
         </article>
     </section>
@@ -71,7 +73,8 @@
     <section id="ol-topThree" class="overlay hidden">
         <article>
             <img src="images/so-sydney.jpg" alt="sydney">
-            <figcaption></figcaption>
+            <figcaption>August 11, 2018 in Beijing, China with Lejia (Sydney) Hu</figcaption>
+            <p>Sydney and I were like a daughter and a mother in high school because I took a lot of care of her. She invited me to her favorite singer's concert, and that was the first time we met after graduating from high school.</p>
             <button class="close">close</button>
         </article>
     </section>
@@ -79,15 +82,17 @@
     <section id="ol-topFour" class="overlay hidden">
         <article>
             <img src="images/so-ceci.jpg" alt="ceci">
-            <figcaption></figcaption>
+            <figcaption>October 18, 2018 in Pompei, Italy with Ceci</figcaption>
+            <p>Ceci is older and a little bit shorter than me, but she always wants to protect and help me because she thinks I'm so little LOL.</p>
             <button class="close">close</button>
         </article>
     </section>
 
     <section id="ol-topFive" class="overlay hidden">
         <article>
-            <img src="images/so-class.JPG" alt="class">
-            <figcaption></figcaption>
+            <img src="images/so-class.JPG" alt="classmates">
+            <figcaption>Last day of the quarer abroad program: December 13, 2018 at the Ponte Vecchio in Florence, Italy</figcaption>
+            <p>All good things must come to an end.</p>
             <button class="close">close</button>
         </article>
     </section>
@@ -95,7 +100,8 @@
     <section id="ol-bottomOne" class="overlay hidden">
         <article>
             <img src="images/fr-cousin.jpg" alt="cousin">
-            <figcaption></figcaption>
+            <figcaption>May 2018 with my cousin Carol</figcaption>
+            <p>I usually call her "my sister". She studies design in LA. She is the only relative I know here. We have nothing in common, but we still love each other.</p>
             <button class="close">close</button>
         </article>
     </section>
@@ -103,7 +109,8 @@
     <section id="ol-bottomTwo" class="overlay hidden">
         <article>
             <img src="images/fr-dorm.jpg" alt="dorm">
-            <figcaption></figcaption>
+            <figcaption>June 2018 at Bixby</figcaption>
+            <p>Farewell, Dormitory.</p>
             <button class="close">close</button>
         </article>
     </section>
@@ -111,15 +118,17 @@
     <section id="ol-bottomThree" class="overlay hidden">
         <article>
             <img src="images/fr-olivia.JPG" alt="olivia">
-            <figcaption></figcaption>
+            <figcaption>June 4, 2018 at Bixby with Olivia Lou</figcaption>
+            <p>Olivia is my high school "daughter" Sydney's best friend, and now she became my best friend in college. She lived right below me. I don't know what my first year will be like without her XD.</p>
             <button class="close">close</button>
         </article>
     </section>
 
     <section id="ol-bottomFour" class="overlay hidden">
         <article>
-            <img src="images/jr-alaska.JPG" alt="alask">
-            <figcaption></figcaption>
+            <img src="images/jr-alaska.JPG" alt="alaska">
+            <figcaption>December, 2019 in Alaska</figcaption>
+            <p>Endless Winter</p>
             <button class="close">close</button>
         </article>
     </section>
@@ -127,7 +136,8 @@
     <section id="ol-bottomFive" class="overlay hidden">
         <article>
             <img src="images/jr-seattle.jpg" alt="seattle">
-            <figcaption></figcaption>
+            <figcaption>March 2019 in Seattle with Tracy and Jiajia</figcaption>
+            <p>Tracy and Jiajia are from Davis Chinese Dance team. I have taken thousands of photos for them. We like to explore all kinds of foods around the campus. They care about me a lot.</p>
             <button class="close">close</button>
         </article>
     </section>
@@ -135,7 +145,8 @@
     <section id="ol-bottomSix" class="overlay hidden">
         <article>
             <img src="images/sr-apt.JPG" alt="apartment">
-            <figcaption></figcaption>
+            <figcaption>June 2021 in Davis: Move Out</figcaption>
+            <p>Farewell, Davis.</p>
             <button class="close">close</button>
         </article>
     </section>
@@ -143,7 +154,8 @@
     <section id="ol-bottomSeven" class="overlay hidden">
         <article>
             <img src="images/sr-meng.JPG" alt="mengmeng">
-            <figcaption></figcaption>
+            <figcaption>November 27, 2020 at UC Davis with Mengmeng Luo</figcaption>
+            <p>We lived on the same floor during our freshman year, and we became close friends in our last year at UC Davis. How fun!</p>
             <button class="close">close</button>
         </article>
     </section>
